--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,9 +5,9 @@
     padding: 10px 20px;
     height: 30px;
     border-bottom:1px solid lightgray;
-    // background: white;
-    // position: sticky;
-    // top: 0;
+    background: white;
+    position: sticky;
+    top: 0;
 
     .left{  
         display: flex;
