--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -1,3 +1,12 @@
 .rightbar{
     flex:3;
+    flex:2;
+    position: sticky;
+    top: 50px;
+    height: calc(100vh - 50px);
+    overflow-y: scroll;
+    &::-webkit-scrollbar{
+        display: none;
+    }
+
 }
